# mcp-Test

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/tests/: test_main.py
frontend/: .env.example  .prettierrc  eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: StatusBadge.tsx
frontend/src/hooks/: useHealth.ts
frontend/src/pages/: Home.tsx  NotFound.tsx
frontend/src/test/: StatusBadge.test.tsx
